# maniple

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
scripts/: claude-maniple-switch  install-systemd-user.sh  setup-provider-presets.sh
src/maniple_mcp/: config.py  config_cli.py  iterm_utils.py  session_state.py  worktree.py
src/maniple_mcp/cli_backends/: base.py  claude.py  codex.py
src/maniple_mcp/terminal_backends/: iterm.py  tmux.py
src/maniple_mcp/tools/: __init__.py  close_workers.py  list_providers.py  spawn_workers.py
src/maniple_mcp/utils/: errors.py
tests/: test_claude_maniple_switch.py  test_cli_backends.py  test_close_workers.py  test_config.py  test_config_cli.py  test_list_providers.py  test_spawn_workers_defaults.py
