[project]
name = "maniple-mcp"
version = "0.13.0"
description = "MCP server for managing multiple Claude Code sessions via iTerm2"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Josh Lehman", email = "josh@martianengineering.com" }
]
maintainers = [
    { name = "Josh Lehman", email = "josh@martianengineering.com" }
]
keywords = ["mcp", "claude", "claude-code", "iterm2", "ai", "automation", "multi-agent", "orchestration", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

dependencies = [
    "mcp>=1.0.0",
    "iterm2>=2.7",
    "msgspec>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/Martian-Engineering/maniple"
Repository = "https://github.com/Martian-Engineering/maniple"
Documentation = "https://github.com/Martian-Engineering/maniple#readme"
Issues = "https://github.com/Martian-Engineering/maniple/issues"
Changelog = "https://github.com/Martian-Engineering/maniple/releases"

[project.scripts]
maniple = "maniple_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# NOTE: Keep the old package paths temporarily so existing imports keep working
# while the full rename (see docs/rename-decisions.md) is implemented.
packages = ["src/maniple", "src/maniple_mcp", "src/claude_team", "src/claude_team_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.14.10",
]
